@@ -1,1 +1,1 @@
-3.6.6
+3.6.7
